tests/NormalTests/paczka1/fuzzy1/18527465.err
Error in line 10: IG91n1O3n A763 62,02
Error in line 3: JNEG A317 87,5
Error in line 13: ZcEtciFigzv A763 77,6
Error in line 16: ZcEtciFigzv A179 77,0
Error in line 14: IG91n1O3n A763 146,8
Error in line 20: ZcEtciFigzv A317 83,8
Error in line 22: IG91n1O3n S932 72,5
Error in line 33: JNEG A763 43,7
